--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "tomlgamelife"
+name = "GameLife"
 uuid = "70dbea99-7dfd-4d09-b955-bc8ef183ec24"
 authors = ["JUAN15377 <150212008+juan15377@users.noreply.github.com>"]
 version = "0.1.0"
