--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,2 @@
-name = "GameLife"
-uuid = "70dbea99-7dfd-4d09-b955-bc8ef183ec24"
-authors = ["JUAN15377 <150212008+juan15377@users.noreply.github.com>"]
-version = "0.1.0"
+[deps]
+GameZero = "9da27670-f782-11e9-1da1-f53579315bfe"
